Updates - pages defined

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,9 @@ main:
     url: /
   - title: "About"
     url: /about/
+  - title: "Projects"
+    url: /projects/
   - title: "Resume"
-    url: /assets/Mark_Collins_Resume.pdf
+    url: /resume/
+  - title: "Contact"
+    url: /contact/
