--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,17 @@
 
 title: "Mark Collins"
 name: "Mark Collins"
-description: "Senior Lead Engineer | Cloud Computing | Automation | Cybersecurity"
+description: "Senior Lead Engineer | Cloud | Automation | Cybersecurity"
 email: mark.allen.collins1@gmail.com
-baseurl: ""
 url: "https://mark-collins.github.io"
-github_username: MA01R
-minimal_mistakes_skin: "air"
+baseurl: ""
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-include-cache
   - jekyll-remote-theme
-markdown: kramdown
-highlighter: rouge
-include: ["_pages"]
+
+include:
+  - _pages
